--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+---
+layout: default
+---
 
+
+{% include career-profile.html %}
+
+{% unless site.data.data.sidebar.education %}
+  {% include education.html %}
+{% endunless %}
+
+{% include experiences.html %}
+
+{% include certifications.html %}
+
+{% include skills.html %}
